eck-llm/quickstart/ingress-es.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: es.${domain}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: quickstart-es-http
            port:
              number: 9200
